manifests/hello-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  namespace: demo
  annotations:
    cert-manager.io/cluster-issuer: 'selfsigned-issuer'
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hello-kubernetes.localcluster
      secretName: hello-kubernetes-tls
  rules:
    - host: hello-kubernetes.localcluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-kubernetes # Service name
                port:
                  number: 80 # Service port
